# nebius-hackathon

./: .gitignore  CLAUDE.md  LICENSE  Makefile  PLAN.md  QUICKSTART.md  README.md  STEPHEN_GUIDE.md  agent.py  catalog.py  demo.py  main.py  orchestrator.py  pyproject.toml  requirements.txt  robot_templates.py  robot_ui.py  schemas.py  sim_viewer.py  store_catalog.json  storefront.py  templates.py
agent/: __init__.py  catalog.py  planner.py
agents/: __init__.py  executor.py  orchestrator.py  planner.py  safety.py  scene_builder.py  scout.py  sim_interface.py
db/: __init__.py  catalog.db  catalog_db.py
db/seed_data/: store_catalog.json
mujoco_sims/: view_g1.py  view_g1_nolegs.py
mujoco_sims/unitree_ros/robots/g1_description/: _demo_tmp.xml  g1_23dof.xml  g1_hybrid.xml  g1_nolegs.xml  scene_nolegs.xml
mujoco_sims/unitree_ros/robots/g1_nolegs/: g1_23dof.xml
robot/: __init__.py  app.py  templates.py
skills/: depth_perception.yaml  localization.yaml  manipulation.yaml  visual_perception.yaml
store/: __init__.py  app.py  templates.py
